[gd_scene load_steps=5 format=3 uid="uid://bjkqe7gy0n4gr"]

[ext_resource type="Script" path="res://UI/UI.gd" id="1_clehj"]
[ext_resource type="PackedScene" uid="uid://boklyp3icpha" path="res://UI/Bars/Healthbar.tscn" id="2_g042w"]
[ext_resource type="PackedScene" uid="uid://d33f6q17cdc2p" path="res://UI/Bars/Fuelbar.tscn" id="3_gy42b"]

[sub_resource type="LabelSettings" id="LabelSettings_pakyj"]
font_size = 24

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_clehj")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 241.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2

[node name="CurrentItem" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0124481
anchor_top = 2.65306
anchor_right = 0.73029
anchor_bottom = 3.54082
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
metadata/_edit_use_anchors_ = true

[node name="CurrentItem" type="Label" parent="Control/CurrentItem"]
layout_mode = 2
text = "Current Item: "

[node name="ItemSprite" type="Sprite2D" parent="Control/CurrentItem"]
unique_name_in_owner = true
position = Vector2(183, 55.0001)
scale = Vector2(3, 3)

[node name="NewWeaponAlert" type="MarginContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.80498
anchor_top = 0.969388
anchor_right = 2.98755
anchor_bottom = 1.85714
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
metadata/_edit_use_anchors_ = true

[node name="NewWeaponAlert" type="Label" parent="Control/NewWeaponAlert"]
unique_name_in_owner = true
layout_mode = 2
text = "New Weapon Just Dropped!!!
"

[node name="WeaponTimer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 5.29876
anchor_top = 4.64286
anchor_right = 5.91286
anchor_bottom = 5.64286
offset_left = -424.0
offset_top = -183.0
offset_right = -331.0
offset_bottom = -183.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
metadata/_edit_use_anchors_ = true

[node name="WeaponTimer" type="Label" parent="Control/WeaponTimer"]
unique_name_in_owner = true
layout_mode = 2
text = "Weapon Timer:
"
label_settings = SubResource("LabelSettings_pakyj")

[node name="Ammo" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.2449
anchor_right = 0.614108
anchor_bottom = 2.2449
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
metadata/_edit_use_anchors_ = true

[node name="Ammo" type="Label" parent="Control/Ammo"]
unique_name_in_owner = true
layout_mode = 2
text = "Ammo:
"
label_settings = SubResource("LabelSettings_pakyj")

[node name="Fame" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 3.99585
anchor_top = 0.530612
anchor_right = 4.55602
anchor_bottom = 1.53061
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
metadata/_edit_use_anchors_ = true

[node name="Fame" type="Label" parent="Control/Fame"]
unique_name_in_owner = true
layout_mode = 2
text = "Fame:
"
label_settings = SubResource("LabelSettings_pakyj")

[node name="FameMultiplier" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 3.48548
anchor_top = 1.21429
anchor_right = 4.53942
anchor_bottom = 2.21429
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
metadata/_edit_use_anchors_ = true

[node name="FameMultiplier" type="Label" parent="Control/FameMultiplier"]
unique_name_in_owner = true
layout_mode = 2
text = "Fame Multiplier:
"
label_settings = SubResource("LabelSettings_pakyj")

[node name="FameMultiTimer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 3.93776
anchor_top = 2.13265
anchor_right = 4.51452
anchor_bottom = 3.13265
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
metadata/_edit_use_anchors_ = true

[node name="FameMultiTimer" type="Label" parent="Control/FameMultiTimer"]
unique_name_in_owner = true
layout_mode = 2
text = "Timer:
"
label_settings = SubResource("LabelSettings_pakyj")

[node name="Healthbar" parent="Control" instance=ExtResource("2_g042w")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 31.0
offset_top = 32.0
offset_right = 389.0
offset_bottom = 49.0

[node name="Fuelbar" parent="Control" instance=ExtResource("3_gy42b")]
layout_mode = 0
offset_left = 33.0
offset_top = 65.0
offset_right = 388.0
offset_bottom = 77.0
